Fix overlap of output and input

--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -43,7 +43,7 @@ div#repl div#output{
 	right: 0px;
 	width: 100%;
 	height: 100%;
-	padding: 0 0 125px 0;
+	padding: 0 0 195px 0;
 	background-color: #333333;
 	z-index: 1;
 	overflow-x: hidden;
